samples/_failures_safe/1761040601_94f457_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7650e205.c: In function ‘main’:
./samples/SAFE/__tmp_7650e205.c:154:9: error: expected expression at end of input
  154 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_7650e205.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7650e205.c:154:9: error: expected declaration or statement at end of input
